--- a/.github/workflows/shalat-scrape.yml
+++ b/.github/workflows/shalat-scrape.yml
@@ -2,7 +2,7 @@ name: Jadwal Shalat Bogor
 
 on:
   schedule:
-    - cron: '* * * * *'  # every day at 00.01
+    - cron: '*/5 * * * *'  # every day at 00.01
 
 
 jobs:
